# pymcu-avr-toolchain

./: .gitignore  README.md  avr-gcc-build.sh
.github/workflows/: build-wheels.yml  smoke-test.yml
python/: LICENSE  README.md  hatch_build.py  pyproject.toml
python/src/pymcu_avr_toolchain/: __init__.py  _fetch.py
python/tests/: test_toolchain_smoke.py
scripts/: bundle-macos-toolchain.sh
