[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "pymcu-avr-toolchain"
version = "1!7.3.0.post2"
description = "Pre-built AVR-GCC 7.3.0 toolchain for PyMCU (avr-gcc, avr-as, avr-objcopy, avr-gdb, avr-libc)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "GPL-2.0-or-later AND LGPL-2.1-or-later AND BSD-2-Clause" }
license-files = ["LICENSE"]
authors = [
    { name = "Iván Montiel Cardona", email = "contact@pymcu.org" },
]
keywords = ["avr", "gcc", "toolchain", "embedded", "cross-compiler", "avr-gcc", "pymcu"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: Software Development :: Compilers",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/PyMCU/pymcu-avr-toolchain"
Repository = "https://github.com/PyMCU/pymcu-avr-toolchain"
"Bug Tracker" = "https://github.com/PyMCU/pymcu-avr-toolchain/issues"

[project.scripts]
pymcu-avr-toolchain-info = "pymcu_avr_toolchain._cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pymcu_avr_toolchain"]
artifacts = [
    "src/pymcu_avr_toolchain/bin/**",
    "src/pymcu_avr_toolchain/lib/**",
    "src/pymcu_avr_toolchain/avr/**",
    "src/pymcu_avr_toolchain/libexec/**",
    "src/pymcu_avr_toolchain/share/**",
]

[tool.hatch.build.targets.wheel.hooks.custom]
path = "hatch_build.py"

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "hatch_build.py",
    "README.md",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
